; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_saa7134_g_fbuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_saa7134_g_fbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_framebuffer = type { i32 }
%struct.saa7134_fh = type { %struct.saa7134_dev* }
%struct.saa7134_dev = type { %struct.v4l2_framebuffer }

@V4L2_FBUF_CAP_LIST_CLIPPING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_framebuffer*)* @saa7134_g_fbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @saa7134_g_fbuf(%struct.file* %0, i8* %1, %struct.v4l2_framebuffer* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_framebuffer*, align 8
  %7 = alloca %struct.saa7134_fh*, align 8
  %8 = alloca %struct.saa7134_dev*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_framebuffer* %2, %struct.v4l2_framebuffer** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.saa7134_fh*
  store %struct.saa7134_fh* %10, %struct.saa7134_fh** %7, align 8
  %11 = load %struct.saa7134_fh*, %struct.saa7134_fh** %7, align 8
  %12 = getelementptr inbounds %struct.saa7134_fh, %struct.saa7134_fh* %11, i32 0, i32 0
  %13 = load %struct.saa7134_dev*, %struct.saa7134_dev** %12, align 8
  store %struct.saa7134_dev* %13, %struct.saa7134_dev** %8, align 8
  %14 = load %struct.v4l2_framebuffer*, %struct.v4l2_framebuffer** %6, align 8
  %15 = load %struct.saa7134_dev*, %struct.saa7134_dev** %8, align 8
  %16 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %15, i32 0, i32 0
  %17 = bitcast %struct.v4l2_framebuffer* %14 to i8*
  %18 = bitcast %struct.v4l2_framebuffer* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 4, i1 false)
  %19 = load i32, i32* @V4L2_FBUF_CAP_LIST_CLIPPING, align 4
  %20 = load %struct.v4l2_framebuffer*, %struct.v4l2_framebuffer** %6, align 8
  %21 = getelementptr inbounds %struct.v4l2_framebuffer, %struct.v4l2_framebuffer* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
